--- a/XamarinCommunityToolkitSample/Pages/Views/AvatarViewPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/AvatarViewPage.xaml
@@ -27,10 +27,10 @@
                                               Source={x:Reference Slider}}"
                                               Text="{Binding Initials}">
 
-                                <views:AvatarView.Source>
+                                <xct:AvatarView.Source>
                                     <UriImageSource Uri="{Binding Source}" />
-                                </views:AvatarView.Source>
-                            </views:AvatarView>
+                                </xct:AvatarView.Source>
+                            </xct:AvatarView>
 
                             <Label FontSize="20"
                                    Text="{Binding Name}"
