--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/TabBadgePage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/TabBadgePage.xaml
@@ -1,26 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<pages:BasePage
+<pages:BasePage 
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.IsTabStripVisiblePage"  
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.TabBadgePage"
     xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
     xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
     <pages:BasePage.Content>
-        <Grid>
+        <Grid
+            RowSpacing="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
             <controls:TabView
-                x:Name="TabView"
+                Grid.Row="0"
                 TabStripPlacement="Bottom"
                 TabStripBackgroundColor="Blue"
                 TabStripHeight="60"
                 TabIndicatorColor="Yellow"
-                TabContentBackgroundColor="Yellow"
-                IsTabStripVisible="False">
+                TabContentBackgroundColor="Yellow">
                 <controls:TabViewItem
                     Icon="triangle.png"
+                    IconSelected="square.png"
                     Text="Tab 1"
                     TextColor="White"
                     TextColorSelected="Yellow"
-                    FontSize="12">
+                    BadgeText="{Binding Counter}"
+                    BadgeBackgroundColor="Pink"
+                    BadgeBackgroundColorSelected="Red"
+                    BadgeTextColor="White"
+                    FontSize="10"
+                    FontSizeSelected="12">
                     <Grid 
                         BackgroundColor="Gray">
                         <Label
@@ -29,12 +39,20 @@
                             Text="TabContent1" />
                     </Grid>
                 </controls:TabViewItem>
-                <controls:TabViewItem
+                <controls:TabViewItem 
                     Icon="circle.png"
+                    IconSelected="square"
                     Text="Tab 2"
                     TextColor="White"
                     TextColorSelected="Yellow"
-                    FontSize="12">
+                    BadgeText="NEW"
+                    BadgeBackgroundColor="DarkOrange"
+                    BadgeBackgroundColorSelected="Red"
+                    BadgeBorderColor="Green"
+                    BadgeBorderColorSelected="LightGreen"
+                    BadgeTextColor="White"
+                    FontSize="10"
+                    FontAttributesSelected="12">
                     <Grid>
                         <Label    
                             HorizontalOptions="Center"
@@ -43,6 +61,16 @@
                     </Grid>
                 </controls:TabViewItem>
             </controls:TabView>
+            <StackLayout
+                Grid.Row="1"
+                Padding="12">
+                <Button
+                    Text="Increase"
+                    Clicked="OnIncreaseClicked"/>
+                <Button
+                    Text="Decrease"
+                    Clicked="OnDecreaseClicked"/>
+            </StackLayout>
         </Grid>
     </pages:BasePage.Content>
 </pages:BasePage>
