Added TabStripBorderColor property

--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/GettingStartedPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/GettingStartedPage.xaml
@@ -10,6 +10,7 @@
             <controls:TabView
                 TabStripPlacement="Bottom"
                 TabStripBackgroundColor="Blue"
+                TabStripBorderColor="Yellow"
                 TabStripHeight="60"
                 TabIndicatorColor="Yellow"
                 TabContentBackgroundColor="Yellow">
