--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/TabPlacementPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/TabPlacementPage.xaml
@@ -16,6 +16,7 @@
                 x:Name="TabView"
                 TabStripPlacement="Bottom"
                 TabStripBackgroundColor="Blue"
+                TabStripBorderColor="Black"
                 TabStripHeight="60"
                 TabIndicatorColor="Yellow"
                 TabContentBackgroundColor="Yellow">
