--- a/XamarinCommunityToolkitSample/Pages/Effects/SafeAreaEffectPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Effects/SafeAreaEffectPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.SafeAreaEffectPage"
                 BackgroundColor="{StaticResource NormalButtonBackgroundColor}">
