--- a/XamarinCommunityToolkitSample/Pages/Views/ViewsGalleryPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/ViewsGalleryPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Views"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.ViewsGalleryPage"
