--- a/XamarinCommunityToolkitSample/Pages/Behaviors/MultiValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/MultiValidationBehaviorPage.xaml
@@ -14,7 +14,7 @@
     <StackLayout Padding="{StaticResource ContentPadding}"
                  Spacing="50"
                  VerticalOptions="CenterAndExpand">
-        <Label Text="Start typing until MaxLength is reached..." />
+        <Label Text="Number validation : -10 to 5" />
         <Entry Placeholder="Number">
             <Entry.Behaviors>
                 <xct:MultiValidationBehavior x:Name="MultiValidation"
@@ -30,6 +30,23 @@
         <Label
             HeightRequest="30"
             Text="{Binding Errors[0], Source={x:Reference MultiValidation}}"/>
+        <Label Text="Password validation" />
+        <Entry IsPassword="True" Placeholder="Password">
+            <Entry.Behaviors>
+                <xct:MultiValidationBehavior InvalidStyle="{StaticResource InvalidEntryStyle}"  >
+                    <xct:CharactersValidationBehavior x:Name="digit" CharacterType="Digit" MinimumCharacterCount="1" xct:MultiValidationBehavior.Error="1 chiffre" RegexPattern="" />
+                    <xct:CharactersValidationBehavior x:Name="upper" CharacterType="UppercaseLetter" MinimumCharacterCount="1" xct:MultiValidationBehavior.Error="1 majuscule" RegexPattern="" />
+                    <xct:CharactersValidationBehavior x:Name="symbol" CharacterType="NonAlphanumericSymbol" MinimumCharacterCount="1" xct:MultiValidationBehavior.Error="1 symbole" RegexPattern=""  />
+                    <xct:CharactersValidationBehavior x:Name="any" CharacterType="Any" MinimumCharacterCount="8" xct:MultiValidationBehavior.Error="8 caractères" RegexPattern="" />
+                </xct:MultiValidationBehavior>
+            </Entry.Behaviors>
+        </Entry>
+        <StackLayout Orientation="Vertical">
+            <Label Text="{Binding IsValid, Source={x:Reference digit}, StringFormat='{}{0} : at least 1 digit'}"/>
+            <Label Text="{Binding IsValid, Source={x:Reference upper}, StringFormat='{}{0} : at least 1 upper'}"/>
+            <Label Text="{Binding IsValid, Source={x:Reference symbol}, StringFormat='{}{0} : at least 1 symbol'}"/>
+            <Label Text="{Binding IsValid, Source={x:Reference any}, StringFormat='{}{0} : at least 8 char'}"/>
+        </StackLayout>
     </StackLayout>
 
 </pages:BasePage>
