Changed the sample page layout

--- a/XamarinCommunityToolkitSample/Pages/Views/CameraViewPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/CameraViewPage.xaml
@@ -1,33 +1,34 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
-                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.CameraViewPage">
-    <StackLayout>
-        <xct:CameraView
-            x:Name="cameraView"
-            CaptureOptions="Video"
-            FlashMode="On"
-            HeightRequest="480"
-            MediaCaptured="CameraView_MediaCaptured"
-            OnAvailable="CameraView_OnAvailable"
-            SavePhotoToFile="True"
-            WidthRequest="640" />
+<pages:BasePage
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.CameraViewPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit">
+    <ScrollView>
+        <StackLayout>
+            <xct:CameraView
+                x:Name="cameraView"
+                CaptureOptions="Video"
+                FlashMode="On"
+                HeightRequest="480"
+                MediaCaptured="CameraView_MediaCaptured"
+                OnAvailable="CameraView_OnAvailable"
+                SavePhotoToFile="True"
+                WidthRequest="640" />
 
-        <StackLayout Grid.Row="1" Orientation="Horizontal">
-            <Label x:Name="zoomLabel" />
-            <Slider
-                x:Name="zoomSlider"
-                Margin="5,0"
-                IsEnabled="False"
-                Maximum="10"
-                Minimum="1"
-                ValueChanged="ZoomSlider_ValueChanged"
-                Value="1" />
-        </StackLayout>
+            <StackLayout Grid.Row="1" Orientation="Horizontal">
+                <Label x:Name="zoomLabel" />
+                <Slider
+                    x:Name="zoomSlider"
+                    Margin="5,0"
+                    IsEnabled="False"
+                    Maximum="10"
+                    Minimum="1"
+                    ValueChanged="ZoomSlider_ValueChanged"
+                    Value="1" />
+            </StackLayout>
 
-        <ScrollView>
             <StackLayout>
                 <Grid ColumnDefinitions="*, *" RowDefinitions="*,*">
                     <StackLayout
@@ -67,8 +68,7 @@
 
                 <Button
                     x:Name="doCameraThings"
-                    Command="{Binding ShutterCommand, Source={x:Reference cameraView}}"
-                    IsEnabled="False"
+                    Clicked="DoCameraThings_Clicked"
                     Text="Start Recording" />
                 <Image
                     x:Name="previewPicture"
@@ -77,6 +77,6 @@
                     HeightRequest="250"
                     IsVisible="False" />
             </StackLayout>
-        </ScrollView>
-    </StackLayout>
+        </StackLayout>
+    </ScrollView>
 </pages:BasePage>
