Add more BadgeView samples about BadgePosition
Add more BadgeView samples about BadgePosition

--- a/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/BadgeViewPage.xaml
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/BadgeViewPage.xaml
@@ -79,23 +79,87 @@
                     <Label
                         Text="Shadow Customization"/>
                 </xct:BadgeView>
-                <xct:BadgeView
-                    HorizontalOptions="Center"
-                    BadgePosition="TopRight"
-                    BackgroundColor="Red"
-                    Text="7"
-                    TextColor="White">
-                    <Grid
-                        HeightRequest="48"
-                        WidthRequest="150"
-                        BackgroundColor="LightGray">
-                        <Label
-                            Padding="12"
-                            HorizontalOptions="Center"
-                            VerticalOptions="Center"
-                            Text="TopRight"/>
-                    </Grid>
-                </xct:BadgeView>
+<Grid
+                    RowDefinitions="auto,auto"
+                    ColumnDefinitions="*,*"
+                    ColumnSpacing="30">
+                    <xct:BadgeView
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        HorizontalOptions="Start"
+                        BadgePosition="TopLeft"
+                        BackgroundColor="Red"
+                        Text="7"
+                        TextColor="White">
+                        <Grid
+                            HeightRequest="48"
+                            WidthRequest="150"
+                            BackgroundColor="LightGray">
+                            <Label
+                                Padding="12"
+                                HorizontalOptions="Center"
+                                VerticalOptions="Center"
+                                Text="TopLeft"/>
+                        </Grid>
+                    </xct:BadgeView>
+                    <xct:BadgeView
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        HorizontalOptions="Start"
+                        BadgePosition="TopRight"
+                        BackgroundColor="Red"
+                        Text="7"
+                        TextColor="White">
+                        <Grid
+                            HeightRequest="48"
+                            WidthRequest="150"
+                            BackgroundColor="LightGray">
+                            <Label
+                                Padding="12"
+                                HorizontalOptions="Center"
+                                VerticalOptions="Center"
+                                Text="TopRight"/>
+                        </Grid>
+                    </xct:BadgeView>
+                    <xct:BadgeView
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        HorizontalOptions="End"
+                        BadgePosition="BottomLeft"
+                        BackgroundColor="Red"
+                        Text="7"
+                        TextColor="White">
+                        <Grid
+                            HeightRequest="48"
+                            WidthRequest="150"
+                            BackgroundColor="LightGray">
+                            <Label
+                                Padding="12"
+                                HorizontalOptions="Center"
+                                VerticalOptions="Center"
+                                Text="BottomLeft"/>
+                        </Grid>
+                    </xct:BadgeView>
+                    <xct:BadgeView
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        HorizontalOptions="Start"
+                        BadgePosition="BottomRight"
+                        BackgroundColor="Red"
+                        Text="7"
+                        TextColor="White">
+                        <Grid
+                            HeightRequest="48"
+                            WidthRequest="150"
+                            BackgroundColor="LightGray">
+                            <Label
+                                Padding="12"
+                                HorizontalOptions="Center"
+                                VerticalOptions="Center"
+                                Text="BottomRight"/>
+                        </Grid>
+                    </xct:BadgeView>
+                </Grid>
                 <Label
                     Text="Badge animations"
                     Style="{StaticResource SectionStyle}"/>
