--- a/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/BadgeViewPage.xaml
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/BadgeViewPage.xaml
@@ -124,7 +124,7 @@
                     <xct:BadgeView
                         Grid.Row="1"
                         Grid.Column="0"
-                        HorizontalOptions="End"
+                        HorizontalOptions="Center"
                         BadgePosition="BottomLeft"
                         BackgroundColor="Red"
                         Text="7"
