Added popup result sample and fixed uwp/android implementations

--- a/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/PopupGalleryPage.xaml
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/PopupGalleryPage.xaml
@@ -9,7 +9,7 @@
                 x:Name="root">
 
     <ContentPage.BindingContext>
-        <viewModels:PopupControlViewModel />
+        <viewModels:PopupGalleryViewModel />
     </ContentPage.BindingContext>
 
     <ContentPage.Resources>
