Fixes for Android MediaElement AspectFit and Metadata retrieval. Added INTERNET permission for retrieving metadata and playing Channel 9 video.

--- a/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/MediaElementPage.xaml
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/MediaElementPage.xaml
@@ -19,6 +19,7 @@
             MediaOpened="OnMediaOpened"
             MediaFailed="OnMediaFailed"
             MediaEnded="OnMediaEnded"
+            HorizontalOptions="Fill"
             SeekCompleted="OnSeekCompleted" />
         <Slider Grid.Row="1" BindingContext="{x:Reference mediaElement}" Value="{Binding Position, Converter={StaticResource TimeSpanConverter}}" Maximum="{Binding Duration, Converter={StaticResource TimeSpanConverter}}"/>
     </Grid>
