--- a/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Effects/TouchEffectPage.xaml
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Effects/TouchEffectPage.xaml
@@ -11,52 +11,49 @@
             <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
             <Setter Property="VerticalOptions" Value="CenterAndExpand" />
             <Setter Property="Spacing" Value="10" />
-        </Style> 
+        </Style>
     </pages:BasePage.Resources>
+    <ScrollView>
+        <StackLayout Padding="{StaticResource ContentPadding}">
 
-    <Grid RowDefinitions="Auto,*,*,*,*" Padding="{StaticResource ContentPadding}">
-
-        <Label Grid.Row="0"
+            <Label
                HorizontalOptions="CenterAndExpand"
                FontSize="Title"
                TextColor="Black"
                Text="{Binding Count, StringFormat='Touches: {0}', Source={x:Reference Page}}" />
 
-        <StackLayout Grid.Row="1"
-                     Style="{StaticResource GridRowContentStyle}">
-            <Label Text="Image | Toggle | Hover" />
-            <Image xct:TouchEffect.NormalBackgroundImageSource="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.button.png}"
+            <StackLayout Style="{StaticResource GridRowContentStyle}">
+                <Label Text="Image | Toggle | Hover" />
+                <Image xct:TouchEffect.NormalBackgroundImageSource="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.button.png}"
                    xct:TouchEffect.PressedBackgroundImageSource="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.button_pressed.png}"
                    xct:TouchEffect.HoveredOpacity="0.8"
                    xct:TouchEffect.IsToggled="False"
                    xct:TouchEffect.Command="{Binding Command, Source={x:Reference Page}}"/>
 
-        </StackLayout>
+            </StackLayout>
 
-        <StackLayout Grid.Row="2"
-                     Style="{StaticResource GridRowContentStyle}">
+            <StackLayout Style="{StaticResource GridRowContentStyle}">
 
-            <Label Text="Scale | Fade | Animated" />
+                <Label Text="Scale | Fade | Animated" />
 
-            <StackLayout Orientation="Horizontal"
+                <StackLayout Orientation="Horizontal"
                          HorizontalOptions="CenterAndExpand"
                          xct:TouchEffect.AnimationDuration="250"
                          xct:TouchEffect.AnimationEasing="{x:Static Easing.CubicInOut}"
                          xct:TouchEffect.PressedScale="0.8"
                          xct:TouchEffect.PressedOpacity="0.6"
                          xct:TouchEffect.Command="{Binding Command, Source={x:Reference Page}}">
-                <BoxView Color="Gold" />
+                    <BoxView Color="Gold" />
                     <Label Text="The entire layout receives touches" />
-                <BoxView Color="Gold"/>
+                    <BoxView Color="Gold"/>
+                </StackLayout>
             </StackLayout>
-        </StackLayout>
 
-        <StackLayout Grid.Row="3"
-                     Style="{StaticResource GridRowContentStyle}">
+            <StackLayout Style="{StaticResource GridRowContentStyle}">
 
-            <Label Text="Native | Long Press" />
+                <Label Text="Native | Long Press" />
 
-            <StackLayout Orientation="Horizontal"
+                <StackLayout Orientation="Horizontal"
                          HorizontalOptions="CenterAndExpand"
                          BackgroundColor="Black"
                          Padding="20"
@@ -64,18 +61,17 @@
                          xct:TouchEffect.NativeAnimation="True"
                          xct:TouchEffect.LongPressCommand="{Binding LongPressCommand, Source={x:Reference Page}}"
                          xct:TouchEffect.Command="{Binding Command, Source={x:Reference Page}}">
-                <Label Text="TITLE"
+                    <Label Text="TITLE"
                        TextColor="White"
                        FontSize="Large"/>
+                </StackLayout>
             </StackLayout>
-        </StackLayout>
 
-        <StackLayout Grid.Row="4"
-                     Style="{StaticResource GridRowContentStyle}">
+            <StackLayout Style="{StaticResource GridRowContentStyle}">
 
-            <Label Text="Color | Rotation | Pulse | Animated" />
+                <Label Text="Color | Rotation | Pulse | Animated" />
 
-            <StackLayout Orientation="Horizontal"
+                <StackLayout Orientation="Horizontal"
                          HorizontalOptions="CenterAndExpand"
                          Padding="20"
                          xct:TouchEffect.AnimationDuration="500"
@@ -84,11 +80,17 @@
                          xct:TouchEffect.PressedBackgroundColor="Orange"
                          xct:TouchEffect.PressedRotation="15"
                          xct:TouchEffect.Command="{Binding Command, Source={x:Reference Page}}">
-                <Label Text="TITLE"
+                    <Label Text="TITLE"
                        TextColor="White"
                        FontSize="Large"/>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout Style="{StaticResource GridRowContentStyle}">
+                <Label Text="Image | Native" />
+                <Image Source="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.button.png}"
+                  xct:TouchEffect.NativeAnimation="True" />
             </StackLayout>
         </StackLayout>
-
-    </Grid>
+    </ScrollView>
 </pages:BasePage>
