--- a/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/Popups/TransparentPopup.xaml
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit.Sample/Pages/Views/Popups/TransparentPopup.xaml
@@ -2,9 +2,10 @@
 <xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
            xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
+           xmlns:uwpxct="clr-namespace:Xamarin.CommunityToolkit.UI.Views.WindowsSpecific;assembly=Xamarin.CommunityToolkit"
            Size="{OnPlatform Android='200, 200', UWP='100, 100', iOS='100, 100'}"
            Color="Transparent"
-           BorderColor="Transparent"
+           uwpxct:Popup.BorderColor="Transparent"
            x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.TransparentPopup">
 
     <Frame 
