--- a/samples/XCT.Sample/Pages/Effects/LifeCycleEffectPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/LifeCycleEffectPage.xaml
@@ -8,14 +8,14 @@
     <ContentPage.Content>
         <StackLayout>
             <StackLayout.Effects>
-                <xct:LifeCycleEffect Loaded="LifeCycleEffect_Loaded" Unloaded="LifeCycleEffect_Unloaded" />
+                <xct:LifecycleEffect Loaded="LifeCycleEffect_Loaded" Unloaded="LifeCycleEffect_Unloaded" />
             </StackLayout.Effects>
             <Label
                 HorizontalOptions="CenterAndExpand"
                 Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand">
                 <Label.Effects>
-                    <xct:LifeCycleEffect Loaded="LifeCycleEffect_Loaded" Unloaded="LifeCycleEffect_Unloaded" />
+                    <xct:LifecycleEffect Loaded="LifeCycleEffect_Loaded" Unloaded="LifeCycleEffect_Unloaded" />
                 </Label.Effects>
             </Label>
             <Image
@@ -23,12 +23,12 @@
                 IsVisible="false"
                 Source="https://raw.githubusercontent.com/xamarin/XamarinCommunityToolkit/main/assets/XamarinCommunityToolkit_128x128.png">
                 <Image.Effects>
-                    <xct:LifeCycleEffect Loaded="LifeCycleEffect_Loaded" Unloaded="LifeCycleEffect_Unloaded" />
+                    <xct:LifecycleEffect Loaded="LifeCycleEffect_Loaded" Unloaded="LifeCycleEffect_Unloaded" />
                 </Image.Effects>
             </Image>
             <Button Clicked="Button_Clicked" Text="Awesome Button">
                 <Button.Effects>
-                    <xct:LifeCycleEffect Loaded="LifeCycleEffect_Loaded" Unloaded="LifeCycleEffect_Unloaded" />
+                    <xct:LifecycleEffect Loaded="LifeCycleEffect_Loaded" Unloaded="LifeCycleEffect_Unloaded" />
                 </Button.Effects>
             </Button>
         </StackLayout>
